RESOLVED FIXED64917
load() does not reset the resource selection algorithm
https://bugs.webkit.org/show_bug.cgi?id=64917
Summary load() does not reset the resource selection algorithm
Eric Carlson
Reported 2011-07-20 19:24:40 PDT
Calling the load() method on a media element should reset state so the resource selection algorithm starts over, but <source> element selection is not reset.
Attachments
Proposed patch. (9.73 KB, patch)
2011-07-20 20:06 PDT, Eric Carlson
no flags
Proposed patch. (9.16 KB, patch)
2011-07-20 20:09 PDT, Eric Carlson
no flags
Updated patch (9.21 KB, patch)
2011-09-01 14:11 PDT, Eric Carlson
darin: review+
Eric Carlson
Comment 1 2011-07-20 19:25:01 PDT
Eric Carlson
Comment 2 2011-07-20 20:06:33 PDT
Created attachment 101549 [details] Proposed patch.
WebKit Review Bot
Comment 3 2011-07-20 20:08:43 PDT
Attachment 101549 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/medi..." exit_code: 1 Source/WebCore/platform/graphics/MediaPlayer.cpp:197: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4 2011-07-20 20:09:50 PDT
Created attachment 101550 [details] Proposed patch.
Eric Carlson
Comment 5 2011-09-01 14:11:37 PDT
Created attachment 106027 [details] Updated patch Update results slightly
Eric Carlson
Comment 6 2011-09-06 11:49:26 PDT
Note You need to log in before you can comment on or make changes to this bug.