load() does not reset the resource selection algorithm https://bugs.webkit.org/show_bug.cgi?id=64917

Reviewed by Darin Adler.

Source/WebCore:

Test: media/video-source-load.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::selectMediaResource): Reset m_nextChildNodeToConsider, update
    comments and rearrange logic to more closely match logic in spec.
(WebCore::HTMLMediaElement::noneSupported): Update comments.

LayoutTests:

* media/video-source-load-expected.txt: Added.
* media/video-source-load.html: Added.


Canonical link: https://commits.webkit.org/83489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94584 268f45cc-cd09-0410-ab3c-d52691b4dbfc